--- a/.github/workflows/boom.yml
+++ b/.github/workflows/boom.yml
@@ -1,10 +1,11 @@
 # This is a basic workflow to help you get started with Actions
 
-name: React App Deploy to Surge
+name: CI
+
+# Controls when the action will run. Triggers the workflow on push or pull request
+# events but only for the master branch
 on:
   push:
-    branches: [ master ]
-  pull_request:
     branches: [ master ]
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
@@ -17,8 +18,7 @@ jobs:
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
     # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      
-  - uses: actions/checkout@v2
+    - uses: actions/checkout@v2
 
     - name: Setup Node.js environment
       uses: actions/setup-node@v2-beta
@@ -38,5 +38,5 @@ jobs:
       run: npm install -g surge
     
     - name: deploying on surge
-      run: surge ./build http://best1.surge.sh/.surge.sh/ --token ${{secrets.SURGE_TOKEN}}
+      run: surge ./build http://best1.surge.sh/ --token ${{secrets.SURGE_TOKEN}}
     
